# qt-openni-player

./: CMakeLists.txt
sources/: OniFrameProvider.cpp  OniFrameProvider.hpp  OniFrameSource.cpp  OniFrameSource.hpp  OniPlayer.cpp  OniPlayer.hpp  main.cpp  onistream.cpp  onistream.hpp  videoplayer.cpp  videoplayer.hpp
